# ORION-Architekt-AT

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  ABSCHLUSS_BERICHT_2026-04-07.md  ALVORADOZEROUNO_GLOBAL_STRATEGY_2026-04-14.md  ANLEITUNG_GITHUB_MAXIMALER_ERFOLG.md  API_README.md  BETA_LAUNCH_PACKAGE.md  CHANGELOG.md  CITATION.cff  COMPLETE_MISSION_STATUS_2026-04-15.md  COMPLETE_SYSTEM_VERIFICATION_2026-04-09.md  COMPREHENSIVE_VALIDATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_AUSFÜHRUNG_2026-04-14.md  DEPLOYMENT_STATUS_EHRLICH.md  DEPLOYMENT_STATUS_PHASE2B.md  DEPLOYMENT_VERIFIKATION_FINAL.md  Dockerfile  Dockerfile.production  EHRLICHE_ANALYSE_2026-04-07.md  ENDKONTROLLE_THE_ARCHITEKT.md  EUROCODE_COMPLETION_REPORT.md  EU_COMPLIANCE_REPORT.md  EXECUTIVE_SUMMARY_ALVORADOZEROUNO.md  FINALER_ABSCHLUSSBERICHT_2026-04-09.md  FINALE_KONTROLLE_2026-04-13.md  FINALE_ZUSAMMENFASSUNG.md  FINALE_ZUSAMMENFASSUNG_2026-04-10.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_EXECUTION_REPORT_2026-04-14.md  FINAL_EXECUTION_SUMMARY_2026-04-14.md  FINAL_TEST_REPORT.md  FULL_PRODUCTION_STATUS.md  GAP_ANALYSIS_CRITICAL.md  GENESIS_ART.txt  GENESIS_FINANCIAL_MODEL.md  GENESIS_INTEGRATION_DOCUMENTATION.md  (+163 more)
.github/: CONTRIBUTING.md  FUNDING.yml  GITHUB_TOPICS.md  INVESTORS.md  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  REPOSITORY_DESCRIPTION.md  SECURITY.md  SOCIAL_PREVIEW_GUIDE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  research_question.yml
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  dast-security-scan.yml  deploy-web.yml  release.yml  sbom-supply-chain.yml
.zap/: rules.tsv
api/: __init__.py  database.py  graphql_schema.py  i18n.py  main.py  models.py  validation.py
api/laws/: __init__.py  models.py  registry.py
api/middleware/: __init__.py  auth.py  logging_middleware.py  rate_limit.py  security_advanced.py
api/ml/: __init__.py
api/routers/: advanced_ai.py  ai_recommendations.py  at_datasources.py  bim_integration.py  bundesland.py  calculations.py  collaboration.py  compliance.py  digital_twin.py  elsa_validation.py  energieausweis_pdf.py  grundriss_ki.py  i18n_router.py  laws_registry.py  monitoring.py  normen_verknuepfung.py  orion_runtime.py  projects.py  reports.py  ros2_bridge.py  tendering.py  validation.py  wohnbaufoerderung.py
api/safety/: __init__.py  audit_trail.py
assets/: THE_ARCHITEKT_BRANDING.md
bsh_ec5_at/: requirements.txt
bsh_ec5_at/reports/: validation_report.json
bsh_ec5_at/src/: bsh_träger_v3.py
cpp_core/: CMakeLists.txt  README.md
cpp_core/include/: dmacas_audit.hpp  dmacas_types.hpp
cpp_core/src/: dmacas_main.cpp
cpp_core/tests/: test_dmacas_types.cpp
ddgk_governance/: __init__.py  compliance_checker.py  hitl_bridge.py  policy_engine.py
docs/: DDGK_BAUMEISTER_INTEGRATION_ANALYSE_2026-05-19.md  DDGK_IST_SOLL_2026-05-20.json  DDGK_NAECHSTE_SCHRITTE_2026-05-20.json  DDGK_RUNTIME_DEMO_ERGEBNIS_2026-05-20.json  ELSA_MARKTFUEHRUNG_STRATEGIE_2026-05-20.md  ZIVILTECHNIKEROE_SYSTEM_VISION.md  tuv_readiness_assessment.md
docs/genesis/: BSH_TRAEGER_ABSCHLUSSBERICHT.md  BSH_TRAEGER_INTEGRATION.md  GENESIS_INTEGRATION.md  GENESIS_PART3_AUDIT.md  IMPLEMENTATION_SUMMARY.md
docs/gtm/: CASE_STUDY_TEMPLATE.md  COMPETITIVE_POSITIONING.md  COMPLIANCE_ROADMAP.md  CUSTOMER_PROFILES.md  PRICING_STRATEGY.md  PROSPECTING_LIST.md  ROI_CALCULATOR.md  SALES_PLAYBOOK.md
docs/integrations/: README.md
docs/web/: CNAME  DEPLOYMENT.md  README.md  index.html  robots.txt  sitemap.xml
eira_runtime/: __init__.py  audit_chain.py  deterministic_executor.py  epistemic_states.py  replay_validator.py
eurocode_ec2_at/src/: beton_träger_v1.py
eurocode_ec3_at/src/: stahl_träger_v1.py
eurocode_ec6_at/src/: mauerwerk_wand_v1.py
eurocode_ec7_at/src/: fundament_v1.py
eurocode_ec8_at/src/: erdbeben_v1.py
frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/css/: style.css
frontend/js/: app.js  orion-art.js
frontend/src/: App.tsx  index.css  (+1 more)
instance/: orion_architekt.db
k8s/: deployment.yaml
models/: cost_model.joblib
monitoring/: alertmanager.yml  prometheus.yml
nginx/: nginx.conf
orion_architekt_at/: __init__.py
runbooks/: BACKUP_VERIFICATION.md  DATABASE_MAINTENANCE.md  DISASTER_RECOVERY.md  INCIDENT_RESPONSE.md  SLO_SLA_DEFINITIONS.md
src/: abschlussbericht_breitbrunn.py  des_agentenschwarm_baumeister.py  epistemic_system.py  orion_architekt_at.py  test_bundeslaender_gesetze.py  test_des_best_practice.py  test_des_fehler_stress.py  test_des_stress_with_plans.py  test_des_vollabgleich.py  test_fehlererkennungs_system.py  test_gesamtausgabe_review.py  test_loesungsvorschlaege_mehrfach.py  test_multiagent_breitbrunn_komplett.py  test_schwarm_optimierung.py  test_verbesserungen.py  test_vollstaendiger_plan_check_koenigstr59.py  test_white_box_fehlererklaerung.py
templates/: contact.html  docs.html  proofs.html  status.html  world.html
tests/: __init__.py  conftest.py  test_advanced_ai_monitoring.py  test_ai_recommendations_advanced.py  test_api_comprehensive.py  test_api_main.py  test_api_middleware.py  test_api_models.py  test_api_routers.py  test_api_security_owasp.py  test_api_validation.py  test_audit_trail.py  test_austria_leading.py  test_bim_integration_advanced.py  test_bim_integration_expanded.py  test_bim_plan_ingestion.py  test_bundesland_router.py  test_business_logic.py  test_calculations_router.py  test_compliance_expanded.py  test_compliance_router.py  test_compliance_router_advanced.py  test_eu_compliance_comprehensive.py  test_eurocode_modules.py  test_kb_validation.py  test_laws_registry.py  test_monitoring_router.py  test_monitoring_router.py.bak  test_multi_agent_consensus_router.py  test_orion_agent_core.py  test_orion_architekt_at.py  test_orion_exceptions.py  test_orion_kernel.py  test_orion_runtime.py  test_orion_runtime_router.py  test_ros2_bridge_router.py  test_security_middleware_advanced.py
validation/: README.md
website/: datenschutz.html  impressum.html  index.html
(+37 files in other folders)
