[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.3.1",
    "atproto>=0.0.64",
    "base58>=2.1.1",
    "beautifulsoup4>=4.14.2",
    "email-validator>=2.2.0",
    "fastapi>=0.123.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "psycopg2-binary>=2.9.10",
    "qiskit>=2.2.3",
    "qiskit-ibm-runtime>=0.44.0",
    "requests>=2.32.5",
    "solana>=0.36.10",
    "solders>=0.27.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]
